reduced container max width

--- a/out.html
+++ b/out.html
@@ -10,6 +10,9 @@
           :lang(ar) {
             font-family: Amiri, serif;
           }
+          .container {
+            max-width: 400px;
+          }
         </style>
         <title>Hava's Arabic Dictionary</title>
     </head>
