--- a/out.html
+++ b/out.html
@@ -14,70 +14,76 @@
             max-width: 400px;
           }
         </style>
-        <title>Hava's Arabic Dictionary</title>
+        <title>Hava: Arabic-English Dictionary</title>
     </head>
     <body>
-        <h1>Hava's Arabic Dictionary</h1><!-- Optional JavaScript; choose one of the two! --><!-- Option 1: Bootstrap Bundle with Popper -->
+        <!--<h1>Hava's Arabic Dictionary</h1>-->
+        <!-- Optional JavaScript; choose one of the two! -->
+        <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <!-- Option 2: Separate Popper and Bootstrap JS -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
         <div class="container">
-<div class="row justify-content-around"><div class="col-auto">(E)</div><div class="col" lang="en" dir="ltr"></div></div>
+          <div class="row justify-content-center"><div class="col-auto" dir="ltr" lang="en"><h1>Arabic-English dictionary for the use of students</h1></div></div>
+          <div class="row justify-content-center"><div class="col-auto" dir="ltr" lang="en">by</div></div>
+          <div class="row justify-content-center"><div class="col-auto" dir="ltr" lang="en"><h3>J.G. Hava</h3></div></div>
+          <div class="row justify-content-center"><div class="col-auto" dir="ltr" lang="en">(Digitization project. Work in progress.)</div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ء»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">أ</div><div class="col" lang="en" dir="ltr">Hey, *interr. part.*, I say, is it?
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَلَمْ وأَلَا</div><div class="col" lang="en" dir="ltr">Is (he, she, it)... not?
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَلَمَّا</div><div class="col" lang="en" dir="ltr">Is (he, she, it)... not... yet?
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">(Eb)</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءب»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">I u (ءَبْب، ءَبَاب، ءِبَاب) إِلى</div><div class="col" lang="en" dir="ltr">To desire a. th.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">-- I u (ءَبْب، ءَبِيب، ءَبَاب، ءَبَاب) ل</div><div class="col" lang="en" dir="ltr">To prepare oneself to, for. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">ءَبْب ج. أَؤُبّ</div><div class="col" lang="en" dir="ltr">Meadow, grazing.
+<div class="row justify-content-around"><div class="col-auto">ءَبْب جـ. أَؤُبّ</div><div class="col" lang="en" dir="ltr">Meadow, grazing.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">ءَبِيب</div><div class="col" lang="en" dir="ltr">Eleventh month of the Coptic year. July. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">(Ebt)</div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">(I) ءَبَتَ u i، (I) ءَبِتَ a (ءَبْت، ءُبُوت)</div><div class="col" lang="en" dir="ltr">To be burning hot (day). 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبت»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I ءَبَتَ u i، I ءَبِتَ a (ءَبْت، ءُبُوت)</div><div class="col" lang="en" dir="ltr">To be burning hot (day). 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">ءَابِت، ءَبِت، ءَبْت</div><div class="col" lang="en" dir="ltr">Burning, hot (day).
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">(Ebv)</div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">(I) ءَبَثَ i (ءَبْث) ه، على</div><div class="col" lang="en" dir="ltr">To speak ill of, to slander. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبث»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I ءَبَثَ i (ءَبْث) ه، على</div><div class="col" lang="en" dir="ltr">To speak ill of, to slander. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">(Ebjd)</div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبجد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبْجَدْ، الحُرُوف الأَبْحَدِيَّة</div><div class="col" lang="en" dir="ltr">The alphabet.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">(Ebd)</div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">(I) ءَبَدَ i (ءُبُود)</div><div class="col" lang="en" dir="ltr">To last.
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I ءَبَدَ i (ءُبُود)</div><div class="col" lang="en" dir="ltr">To last.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">-- ب</div><div class="col" lang="en" dir="ltr">To settle, to abide in a place.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">-- u i (ءُبُود)</div><div class="col" lang="en" dir="ltr">To become wild (cattle); to take fright. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">(I) ءَبِدَ a (ءَبَد) على</div><div class="col" lang="en" dir="ltr">To irritate o.'s self with.
+<div class="row justify-content-around"><div class="col-auto">I ءَبِدَ a (ءَبَد) على</div><div class="col" lang="en" dir="ltr">To irritate o.'s self with.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">(II)  هـ، ه</div><div class="col" lang="en" dir="ltr">To perpetuate. To scare.
+<div class="row justify-content-around"><div class="col-auto">II  هـ، ه</div><div class="col" lang="en" dir="ltr">To perpetuate. To scare.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">(V) </div><div class="col" lang="en" dir="ltr">To become everlasting (th.). To become wild (place). 
+<div class="row justify-content-around"><div class="col-auto">V </div><div class="col" lang="en" dir="ltr">To become everlasting (th.). To become wild (place). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">ءَبَد ج. ءَءْبَاد، ءُبُود</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
+<div class="row justify-content-around"><div class="col-auto">ءَبَد جـ. ءَءْبَاد، ءُبُود</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبَدًا، أَبَد الأبَدِين، أَبَد الأَبَد</div><div class="col" lang="en" dir="ltr">Always, ever, never. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">على الأَبَد، إلى الأَبَد</div><div class="col" lang="en" dir="ltr">For ever.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">ءَابِد ج. ءَوَابِود</div><div class="col" lang="en" dir="ltr">An extraordinary event. A wild beast. 
+<div class="row justify-content-around"><div class="col-auto">ءَابِد جـ. ءَوَابِود</div><div class="col" lang="en" dir="ltr">An extraordinary event. A wild beast. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">ءَبَد، مُؤَبَّد</div><div class="col" lang="en" dir="ltr">Perpetual; eternal.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">ءَبَد</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">(Ebr)</div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">(I) ءَبَرَ i u (ءَبْر، ءِبَار) ه</div><div class="col" lang="en" dir="ltr">To prick a. o.  with a needle. To spur. To give to a. o. to eat a needle in his food. To backbite. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبر»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I ءَبَرَ i u (ءَبْر، ءِبَار) ه</div><div class="col" lang="en" dir="ltr">To prick a. o.  with a needle. To spur. To give to a. o. to eat a needle in his food. To backbite. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To fecundate; to graft (a palm-tree). etc. 
 </div></div>
@@ -113,7 +119,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Anything put under the armpit.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">I put it baneath my armpit. 
+<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">I put it beneath my armpit. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To run away, to flee, to take flight (slave). 
 </div></div>
@@ -135,7 +141,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">A place full of camels, where many camels are to be found. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To accuse, to charge a. 0. with a fault. 
+<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To accuse, to charge a. o. with a fault. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To compose the elegy of, to praise a dead person. 
 </div></div>
@@ -169,7 +175,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">The Heavenly Father.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">0 my father!
+<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">O my father!
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Cock.
 </div></div>
