added aorist conjugation. integrated hamzater.

--- a/out.html
+++ b/out.html
@@ -26,64 +26,64 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
         <div class="container">
-          <div class="row justify-content-center"><div class="col-auto" dir="ltr" lang="en"><h1>Arabic-English dictionary for the use of students</h1></div></div>
+          <div class="row justify-content-center"><div class="col-auto text-center" dir="ltr" lang="en"><h1>Arabic-English Dictionary for the Use of Students</h1></div></div>
           <div class="row justify-content-center"><div class="col-auto" dir="ltr" lang="en">by</div></div>
           <div class="row justify-content-center"><div class="col-auto" dir="ltr" lang="en"><h3>J.G. Hava</h3></div></div>
           <div class="row justify-content-center"><div class="col-auto" dir="ltr" lang="en">(Digitization project. Work in progress.)</div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ء»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">أ</div><div class="col" lang="en" dir="ltr">Hey, *interr. part.*, I say, is it?
+<div class="row justify-content-around"><div class="col-auto">أَ</div><div class="col" lang="en" dir="ltr">Hey, *interr. part.*, I say, is it?
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَلَمْ وأَلَا</div><div class="col" lang="en" dir="ltr">Is (he, she, it)... not?
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَلَمَّا</div><div class="col" lang="en" dir="ltr">Is (he, she, it)... not... yet?
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءب»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I u (ءَبْب، ءَبَاب، ءِبَاب) إِلى</div><div class="col" lang="en" dir="ltr">To desire a. th.
+<div class="row justify-content-around"><div class="col-auto">I أَبَّ يَؤُبُّ (أَبْب، أَبَاب، إِبَاب) إِلى</div><div class="col" lang="en" dir="ltr">To desire a. th.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">-- I u (ءَبْب، ءَبِيب، ءَبَاب، ءَبَاب) ل</div><div class="col" lang="en" dir="ltr">To prepare oneself to, for. 
+<div class="row justify-content-around"><div class="col-auto">-- يَئِبُّ يَؤُبُّ (أَبْب، أَبِيب، أَبَاب، أَبَاب) ل</div><div class="col" lang="en" dir="ltr">To prepare oneself to, for. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">ءَبْب جـ. أَؤُبّ</div><div class="col" lang="en" dir="ltr">Meadow, grazing.
+<div class="row justify-content-around"><div class="col-auto">أَبْب جـ. أَؤُبّ</div><div class="col" lang="en" dir="ltr">Meadow, grazing.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">ءَبِيب</div><div class="col" lang="en" dir="ltr">Eleventh month of the Coptic year. July. 
+<div class="row justify-content-around"><div class="col-auto">أَبِيب</div><div class="col" lang="en" dir="ltr">Eleventh month of the Coptic year. July. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبت»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I ءَبَتَ u i، I ءَبِتَ a (ءَبْت، ءُبُوت)</div><div class="col" lang="en" dir="ltr">To be burning hot (day). 
+<div class="row justify-content-around"><div class="col-auto">I أَبَتَ يَأْبُتُ يَأْبِتُ، أَبِتَ يَأْبَتُ (أَبْت، أُبُوت)</div><div class="col" lang="en" dir="ltr">To be burning hot (day). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">ءَابِت، ءَبِت، ءَبْت</div><div class="col" lang="en" dir="ltr">Burning, hot (day).
+<div class="row justify-content-around"><div class="col-auto">آبِت، أَبِت، أَبْت</div><div class="col" lang="en" dir="ltr">Burning, hot (day).
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبث»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I ءَبَثَ i (ءَبْث) ه، على</div><div class="col" lang="en" dir="ltr">To speak ill of, to slander. 
+<div class="row justify-content-around"><div class="col-auto">I أَبَثَ يَأْبِثُ (أَبْث) ه، على</div><div class="col" lang="en" dir="ltr">To speak ill of, to slander. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبجد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبْجَدْ، الحُرُوف الأَبْحَدِيَّة</div><div class="col" lang="en" dir="ltr">The alphabet.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I ءَبَدَ i (ءُبُود)</div><div class="col" lang="en" dir="ltr">To last.
+<div class="row justify-content-around"><div class="col-auto">I أَبَدَ يَأْبِدُ (أُبُود)</div><div class="col" lang="en" dir="ltr">To last.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">-- ب</div><div class="col" lang="en" dir="ltr">To settle, to abide in a place.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">-- u i (ءُبُود)</div><div class="col" lang="en" dir="ltr">To become wild (cattle); to take fright. 
+<div class="row justify-content-around"><div class="col-auto">-- يَأْبُدُ يَأْبِدُ (أُبُود)</div><div class="col" lang="en" dir="ltr">To become wild (cattle); to take fright. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">I ءَبِدَ a (ءَبَد) على</div><div class="col" lang="en" dir="ltr">To irritate o.'s self with.
+<div class="row justify-content-around"><div class="col-auto">I أَبَدَ يَأْبَدُ (أَبَد) على</div><div class="col" lang="en" dir="ltr">To irritate o.'s self with.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">II  هـ، ه</div><div class="col" lang="en" dir="ltr">To perpetuate. To scare.
+<div class="row justify-content-around"><div class="col-auto">II هـ، ه</div><div class="col" lang="en" dir="ltr">To perpetuate. To scare.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">V </div><div class="col" lang="en" dir="ltr">To become everlasting (th.). To become wild (place). 
+<div class="row justify-content-around"><div class="col-auto">V</div><div class="col" lang="en" dir="ltr">To become everlasting (th.). To become wild (place). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">ءَبَد جـ. ءَءْبَاد، ءُبُود</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
+<div class="row justify-content-around"><div class="col-auto">أَبَد جـ. أَأْبَاد، أُبُود</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبَدًا، أَبَد الأبَدِين، أَبَد الأَبَد</div><div class="col" lang="en" dir="ltr">Always, ever, never. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">على الأَبَد، إلى الأَبَد</div><div class="col" lang="en" dir="ltr">For ever.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">ءَابِد جـ. ءَوَابِود</div><div class="col" lang="en" dir="ltr">An extraordinary event. A wild beast. 
+<div class="row justify-content-around"><div class="col-auto">آبِد جـ. أَوَابِود</div><div class="col" lang="en" dir="ltr">An extraordinary event. A wild beast. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">ءَبَد، مُؤَبَّد</div><div class="col" lang="en" dir="ltr">Perpetual; eternal.
+<div class="row justify-content-around"><div class="col-auto">أَبَد، مُؤَبَّد</div><div class="col" lang="en" dir="ltr">Perpetual; eternal.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">ءَبَد</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
+<div class="row justify-content-around"><div class="col-auto">أَبَد</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبر»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I ءَبَرَ i u (ءَبْر، ءِبَار) ه</div><div class="col" lang="en" dir="ltr">To prick a. o.  with a needle. To spur. To give to a. o. to eat a needle in his food. To backbite. 
+<div class="row justify-content-around"><div class="col-auto">I أَبَرَ يَأْبِرُ يَأْبُرُ (أَبْر، إِبَار) ه</div><div class="col" lang="en" dir="ltr">To prick a. o.  with a needle. To spur. To give to a. o. to eat a needle in his food. To backbite. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To fecundate; to graft (a palm-tree). etc. 
 </div></div>
