fixed hamzater for special case of alongside hamzas

--- a/out.html
+++ b/out.html
@@ -70,7 +70,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">V</div><div class="col" lang="en" dir="ltr">To become everlasting (th.). To become wild (place). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">أَبَد جـ. أَأْبَاد، أُبُود</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
+<div class="row justify-content-around"><div class="col-auto">أَبَد جـ. آبَاد، أُبُود</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبَدًا، أَبَد الأبَدِين، أَبَد الأَبَد</div><div class="col" lang="en" dir="ltr">Always, ever, never. 
 </div></div>
