added suffixes to num2word

--- a/out.html
+++ b/out.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
         <style> 
           :lang(ar) {
-            font-family: Amiri, serif;
+            font-family: Vazir, serif;
           }
           .container {
             max-width: 400px;
@@ -38,11 +38,11 @@
 <div class="row justify-content-around"><div class="col-auto">أَلَمَّا</div><div class="col" lang="en" dir="ltr">Is (he, she, it)... not... yet?
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءب»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I أَبَّ يَؤُبُّ (أَبْب، أَبَاب، إِبَاب) إِلى</div><div class="col" lang="en" dir="ltr">To desire a. th.
+<div class="row justify-content-around"><div class="col-auto">I أَبَّ يَؤُبُّ (أَبّ، أَبَابَة، إِبَابَة) إِلى</div><div class="col" lang="en" dir="ltr">To desire a. th.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">-- يَئِبُّ يَؤُبُّ (أَبْب، أَبِيب، أَبَاب، أَبَاب) ل</div><div class="col" lang="en" dir="ltr">To prepare oneself to, for. 
+<div class="row justify-content-around"><div class="col-auto">-- يَئِبُّ يَؤُبُّ (أَبّ، أَبِيب، أَبَاب، أَبَابَة) ل</div><div class="col" lang="en" dir="ltr">To prepare oneself to, for. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">أَبْب جـ. أَؤُبّ</div><div class="col" lang="en" dir="ltr">Meadow, grazing.
+<div class="row justify-content-around"><div class="col-auto">أَبّ جـ. أَؤُبّ</div><div class="col" lang="en" dir="ltr">Meadow, grazing.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبِيب</div><div class="col" lang="en" dir="ltr">Eleventh month of the Coptic year. July. 
 </div></div>
@@ -55,7 +55,7 @@
 <div class="row justify-content-around"><div class="col-auto">I أَبَثَ يَأْبِثُ (أَبْث) ه، على</div><div class="col" lang="en" dir="ltr">To speak ill of, to slander. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبجد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">أَبْجَدْ، الحُرُوف الأَبْحَدِيَّة</div><div class="col" lang="en" dir="ltr">The alphabet.
+<div class="row justify-content-around"><div class="col-auto">أَبْجَدْ، الحُرُوف الأَبْجَدِيَّة</div><div class="col" lang="en" dir="ltr">The alphabet.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">I أَبَدَ يَأْبِدُ (أُبُود)</div><div class="col" lang="en" dir="ltr">To last.
@@ -76,7 +76,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">على الأَبَد، إلى الأَبَد</div><div class="col" lang="en" dir="ltr">For ever.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">آبِد جـ. أَوَابِود</div><div class="col" lang="en" dir="ltr">An extraordinary event. A wild beast. 
+<div class="row justify-content-around"><div class="col-auto">آبِدَة جـ. أَوَابِود</div><div class="col" lang="en" dir="ltr">An extraordinary event. A wild beast. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبَد، مُؤَبَّد</div><div class="col" lang="en" dir="ltr">Perpetual; eternal.
 </div></div>
